--- a/config.json
+++ b/config.json
@@ -6,5 +6,13 @@
 		"--background: #212121;",
 		"--animation: terminal-underline;",
 		"--size: 1.5;"
+	],
+	"commands": [
+		{
+			"command": "aaa"
+		},
+		{
+			"command": "bbb"
+		}
 	]
 }
